fullSandbox11072023/force-app/main/default/objects/Product2/fields/Single_Use_Demo__c.field-meta.xml
<CustomField>
    <fullName>Single_Use_Demo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field used to identify products eligible as single use demo for Sample Request process.</description>
    <inlineHelpText>Field used to identify products eligible as single use demo for Sample Request process. Bin 4000 (Not for Human Use)</inlineHelpText>
    <label>Single Use Demo</label>
    <type>Checkbox</type>
</CustomField>