fullSandbox11072023/force-app/main/default/objects/Product2/fields/Standard_Renewal_Rate__c.field-meta.xml
<CustomField>
    <fullName>Standard_Renewal_Rate__c</fullName>
    <label>Standard Renewal Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>