fullSandbox11072023/force-app/main/default/objects/Product2/fields/SubGroup__c.field-meta.xml
<CustomField>
    <fullName>SubGroup__c</fullName>
    <label>SubGroup</label>
    <length>50</length>
    <type>Text</type>
</CustomField>