fullSandbox11072023/force-app/main/default/objects/Product2/fields/Surgical_Disposables__c.field-meta.xml
<CustomField>
    <fullName>Surgical_Disposables__c</fullName>
    <defaultValue>&quot;Not Applicable&quot;</defaultValue>
    <inlineHelpText>Compensable Analysis Work Field</inlineHelpText>
    <label>Surgical Disposables</label>
    <length>50</length>
    <type>Text</type>
</CustomField>