fullSandbox11072023/force-app/main/default/objects/Product2/fields/Surgical_Instruments__c.field-meta.xml
<CustomField>
    <fullName>Surgical_Instruments__c</fullName>
    <defaultValue>&quot;Not Applicable&quot;</defaultValue>
    <label>Surgical Instruments</label>
    <length>50</length>
    <type>Text</type>
</CustomField>