fullSandbox11072023/force-app/main/default/objects/Product2/fields/Trade_In__c.field-meta.xml
<CustomField>
    <fullName>Trade_In__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specifies if product is a trade-in.</description>
    <inlineHelpText>Specifies if product is a trade-in.</inlineHelpText>
    <label>Trade-In</label>
    <type>Checkbox</type>
</CustomField>