fullSandbox11072023/force-app/main/default/objects/Product2/fields/Transfer_Price__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Price__c</fullName>
    <inlineHelpText>ZTRP</inlineHelpText>
    <label>Transfer Price</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>