fullSandbox11072023/force-app/main/default/objects/Product2/fields/UOM__c.field-meta.xml
<CustomField>
    <fullName>UOM__c</fullName>
    <description>Sales Unit of Measure 
CS - Case
EA - Each</description>
    <inlineHelpText>Sales Unit of Measure 
CS - Case
EA - Each</inlineHelpText>
    <label>UOM</label>
    <length>4</length>
    <type>Text</type>
</CustomField>