fullSandbox11072023/force-app/main/default/objects/Product2/fields/Urology__c.field-meta.xml
<CustomField>
    <fullName>Urology__c</fullName>
    <defaultValue>&quot;Not Applicable&quot;</defaultValue>
    <label>Urology</label>
    <length>50</length>
    <type>Text</type>
</CustomField>