fullSandbox11072023/force-app/main/default/objects/Product2/fields/Valuated_Unrestricted_Use_Stock__c.field-meta.xml
<CustomField>
    <fullName>Valuated_Unrestricted_Use_Stock__c</fullName>
    <label>Product On Hand</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>