fullSandbox11072023/force-app/main/default/objects/Product2/fields/Vascular__c.field-meta.xml
<CustomField>
    <fullName>Vascular__c</fullName>
    <defaultValue>&quot;Not Applicable&quot;</defaultValue>
    <label>Vascular</label>
    <length>50</length>
    <type>Text</type>
</CustomField>