fullSandbox11072023/force-app/main/default/objects/Product2/fields/VP_Price__c.field-meta.xml
<CustomField>
    <fullName>VP_Price__c</fullName>
    <defaultValue>0</defaultValue>
    <label>VP Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>