fullSandbox11072023/force-app/main/default/objects/Product2/fields/VPS_Consumable__c.field-meta.xml
<CustomField>
    <fullName>VPS_Consumable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VPS Consumable</label>
    <type>Checkbox</type>
</CustomField>