fullSandbox11072023/force-app/main/default/objects/Product2/fields/VPS_Rhythm_Refurb__c.field-meta.xml
<CustomField>
    <fullName>VPS_Rhythm_Refurb__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specifies products available for Vascular Bundles.</description>
    <inlineHelpText>Specifies products available for Vascular Bundles.</inlineHelpText>
    <label>VPS Rhythm - Refurb</label>
    <type>Checkbox</type>
</CustomField>