fullSandbox11072023/force-app/main/default/objects/Product2/fields/Weeks_On_Hand__c.field-meta.xml
<CustomField>
    <fullName>Weeks_On_Hand__c</fullName>
    <formula>if(Average_Weekly_Demand__c &gt; 0,
Valuated_Unrestricted_Use_Stock__c / Average_Weekly_Demand__c,
NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weeks On Hand</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>