fullSandbox11072023/force-app/main/default/objects/Product2/fields/X1_year__c.field-meta.xml
<CustomField>
    <fullName>X1_year__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specifies products available for Vascular Bundles.</description>
    <inlineHelpText>Specifies products available for Vascular Bundles.</inlineHelpText>
    <label>1 year</label>
    <type>Checkbox</type>
</CustomField>