fullSandbox11072023/force-app/main/default/objects/Product2/fields/Zero_Check__c.field-meta.xml
<CustomField>
    <fullName>Zero_Check__c</fullName>
    <formula>IF(ProductCode = Name, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zero Check</label>
    <type>Checkbox</type>
</CustomField>