fullSandbox11072023/force-app/main/default/objects/Product2/recordTypes/Healthcare_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Healthcare_Record_Type</fullName>
    <active>true</active>
    <description>Record type designated to healthcare product records.</description>
    <label>Healthcare Product Record Type</label>
</RecordType>