fullSandbox11072023/force-app/main/default/objects/Product2/validationRules/Product_Name_Changed_Error.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_Name_Changed_Error</fullName>
    <active>true</active>
    <description>Every field on Products should be read only but we cannot make the &quot;Name&quot; read only. This was mainly created to support the Respiratory Specialty Contracts - CS permission set which gives them access to edit fields on the object.</description>
    <errorConditionFormula>AND(
$Profile.Name &lt;&gt; &quot;TFX System Administrator&quot;,
ISCHANGED( Name ))</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>You cannot change the &quot;Name&quot; field on the Product. Please change it back to what it was or click Cancel and perform your action again without changing the name.</errorMessage>
</ValidationRule>