fullSandbox11072023/force-app/main/default/objects/Product2/listViews/National_Pool_Sets.listView-meta.xml
<ListView>
    <fullName>National_Pool_Sets</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>National_Pool__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>National_Pool__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>National Pool Sets</label>
</ListView>